# cocohelper

./: .buildinfo  .gitignore  LICENSE  apigen.html  call_for_contributions.html  contributing.html  environment.yml  genindex.html  index.html  installation.html  objects.inv  py-modindex.html  pyproject.toml  readme.md  requirements.txt  roadmap.html  search.html  searchindex.js  setup.py  usage.html
.doctrees/: apigen.doctree  call_for_contributions.doctree  contributing.doctree  environment.pickle  index.doctree  installation.doctree  roadmap.doctree  usage.doctree
.doctrees/_autosummary/: cocohelper.adapters.binary_mask_adapter.BinaryMaskDatasetAdapter.doctree  cocohelper.adapters.binary_mask_adapter.doctree  cocohelper.adapters.dataset_adapter.DatasetAdapter.doctree  cocohelper.adapters.dataset_adapter.doctree  cocohelper.adapters.doctree  cocohelper.dataframe.doctree  cocohelper.doctree  cocohelper.errors.doctree  cocohelper.errors.not_found_error.COCOAnnotationNotFoundError.doctree  cocohelper.errors.not_found_error.COCOImageNotFoundError.doctree  cocohelper.errors.not_found_error.doctree  cocohelper.errors.validation_error.COCOValidationError.doctree  cocohelper.errors.validation_error.doctree  cocohelper.filters.cocofilters.cocofilters.anns_filter.doctree  cocohelper.filters.cocofilters.cocofilters.cats_filter.doctree  cocohelper.filters.cocofilters.cocofilters.doctree  cocohelper.filters.cocofilters.cocofilters.imgs_filter.doctree  cocohelper.filters.cocofilters.doctree  cocohelper.filters.doctree  cocohelper.filters.filter.AndFilter.doctree  cocohelper.filters.filter.ColumnFilter.doctree  cocohelper.filters.filter.ComposeFilter.doctree  cocohelper.filters.filter.Filter.doctree  cocohelper.filters.filter.NotFilter.doctree  cocohelper.filters.filter.OrFilter.doctree  cocohelper.filters.filter.RangeFilter.doctree  cocohelper.filters.filter.ValueFilter.doctree  cocohelper.filters.filter.doctree  cocohelper.filters.strategies.doctree  cocohelper.filters.strategies.functional.doctree  (+104 more)
_autosummary/: cocohelper.adapters.binary_mask_adapter.BinaryMaskDatasetAdapter.html  cocohelper.adapters.binary_mask_adapter.html  cocohelper.adapters.dataset_adapter.DatasetAdapter.html  cocohelper.adapters.dataset_adapter.html  cocohelper.adapters.html  cocohelper.dataframe.COCODataFrame.html  cocohelper.dataframe.html  cocohelper.errors.html  cocohelper.errors.not_found_error.COCOAnnotationNotFoundError.html  cocohelper.errors.not_found_error.COCOImageNotFoundError.html  cocohelper.errors.not_found_error.html  cocohelper.errors.validation_error.COCOValidationError.html  cocohelper.errors.validation_error.html  cocohelper.filters.cocofilters.cocofilters.anns_filter.html  cocohelper.filters.cocofilters.cocofilters.cats_filter.html  cocohelper.filters.cocofilters.cocofilters.html  cocohelper.filters.cocofilters.cocofilters.imgs_filter.html  cocohelper.filters.cocofilters.html  cocohelper.filters.filter.AndFilter.html  cocohelper.filters.filter.ColumnFilter.html  cocohelper.filters.filter.ComposeFilter.html  cocohelper.filters.filter.Filter.html  cocohelper.filters.filter.NotFilter.html  cocohelper.filters.filter.OrFilter.html  cocohelper.filters.filter.RangeFilter.html  cocohelper.filters.filter.ValueFilter.html  cocohelper.filters.filter.html  cocohelper.filters.html  cocohelper.filters.strategies.functional.filter_multi_rows_having_all.html  cocohelper.filters.strategies.functional.filter_multi_rows_having_any.html  cocohelper.filters.strategies.functional.filter_rows_having.html  cocohelper.filters.strategies.functional.filter_rows_in_range.html  cocohelper.filters.strategies.functional.filter_rows_out_range.html  cocohelper.filters.strategies.functional.html  cocohelper.filters.strategies.html  cocohelper.filters.strategies.strategies.AllValueFilterStrategy.html  cocohelper.filters.strategies.strategies.AnyValueFilterStrategy.html  cocohelper.filters.strategies.strategies.HavingValueFilterStrategy.html  cocohelper.filters.strategies.strategies.InRangeFilterStrategy.html  cocohelper.filters.strategies.strategies.NotInRangeFilterStrategy.html  (+95 more)
_modules/: index.html
_sources/: apigen.rst.txt  contributing.md.txt  installation.md.txt  usage.md.txt
_static/: style.css
doc/src-man/: conf.py  (+3 more)
notebooks/: coco_helper_loaders.ipynb  quick_start.ipynb  readme.md
(+271 files in other folders)
